# flash-colsum

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
benchmarks/: benchmark_colsum.py  plot_from_csv.py
benchmarks/baselines/: __init__.py  naive.py  triton_fa2.py
flash_colsum/: __init__.py  flash.py  kernel_unified.py  naive.py  ops.py
tests/: test_core.py  test_correctness.py
